# recollection

./: .env.example  .example.env  .gitignore  README.md  alembic.ini  config.yaml  docker-compose.yml  pyproject.toml
docker/: server.Dockerfile  web.Dockerfile
docs/: COURSE_GENERATION.md  SESSION_SUMMARY.md
examples/: app.py  demo.py  generate_course_from_url.py  test_course_generation.py  test_serialization.py  test_websocket.py  test_youtube.py
server/: README.md
server/api/: dependencies.py  main.py  redis_listener.py  websocket.py
server/api/routes/: auth.py  content.py  courses.py  progress.py  tasks.py  websocket_routes.py
server/db/: database.py  models.py
server/db/migrations/: env.py
server/db/migrations/versions/: 004_add_activity_tracking.py
server/schemas/: auth.py
server/security/: jwt.py
server/services/: completion_validator.py
src/: config.py
src/content/: models.py
src/content/analysis/: analyze.py
src/content/analysis/components/: base.py  registry.py
src/content/loader/: base.py  detector.py  magic.py  summarizer.py
src/content/loader/wrappers/: __init__.py  pdf_loader.py  text_loader.py  web_loader.py  youtube_loader.py
src/course/: __init__.py  generator.py  merger.py  models.py
src/course/activities/: __init__.py  assessment.py  base.py  challenge.py  daily.py  game.py  quiz.py
src/course/strategies/: __init__.py  analysis.py  base.py  documentary.py  news.py  tutorial.py
src/llm/: __init__.py  anthropic.py  factory.py  openai.py  types.py
tests/: test_config.py  test_detector.py  test_llm.py  test_magic_loader.py  test_serialization.py
web/: openapi-ts.config.ts  openapi.json  package.json  pnpm-lock.yaml
web/src/: routeTree.gen.ts
web/src/components/ui/: button.tsx  input.tsx  progress.tsx
web/src/contexts/: AuthContext.tsx
web/src/hooks/: useLessonTimeTracking.ts  useTaskProgress.ts
web/src/routes/: __root.tsx  index.tsx
web/src/routes/auth/: login.tsx  register.tsx
web/src/routes/content/: index.tsx
web/src/routes/courses/: $courseId.tsx  index.tsx
workers/: celery_app.py  monitoring.py
workers/tasks/: content_tasks.py  course_tasks.py
